# verstca_saita

./: README.md
ParsingVacancies/: README.md  main.py  vacancies.json
ParsingVacancies/src/: check_json.py  config.py
ParsingVacanciesHHSJ/: main.py  requirements.txt
ParsingVacanciesHHSJ/src/: . gitignore  .env_example  api.py  check_json.py  utils.py  vacancy.py
SQL_PROJECT/: README.md  db_class.py  main.py  pyproject.toml  utils.py
kursovaya3/tests/: test_all_defs.py
pythonProject/: 123.py  abs.py  main.py
pythonProject13.0/: main.py
sborka_saita/: index.html  main.py  pyproject.toml
